--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,18 @@
-cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 project(smplx)
-
+set(TORCH_DIR /path/to/your/libtorch/share/cmake/Torch)
 find_package(Torch REQUIRED)
 find_package(ZLIB REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 
-add_library(smplx SHARED bodymodel.cpp joint_names.cpp lbs.cpp npyio.cpp vertex_ids.cpp)
-target_link_libraries(smplx "${TORCH_LIBRARIES}" ZLIB::ZLIB)
-set_property(TARGET smplx PROPERTY CXX_STANDARD 17)
+set(PROJECT_SOURCES body_models.cpp joint_names.cpp lbs.cpp npyio.cpp vertex_ids.cpp vertex_joint_selector.cpp)
 
+add_library(smplx SHARED ${PROJECT_SOURCES})
+add_library(smplx_static STATIC ${PROJECT_SOURCES})
+target_link_libraries(smplx "${TORCH_LIBRARIES}" ZLIB::ZLIB)
+target_link_libraries(smplx_static "${TORCH_LIBRARIES}" ZLIB::ZLIB)
+set_property(TARGET smplx PROPERTY CXX_STANDARD 17)
+set_property(TARGET smplx_staic PROPERTY CXX_STANDARD 17)
 # The following code block is suggested to be used on Windows.
 # According to https://github.com/pytorch/pytorch/issues/25457,
 # the DLLs need to be copied to avoid memory errors.
