fix: add missing initialization for vertex_joint_selector_ and dtype for extra_joints_idxs_

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 project(smplx)
 
 include_directories(./include)
-set(TORCH_DIR /path/to/your/libtorch/share/cmake/Torch)
+set(Torch_DIR G:/development/libtorch/share/cmake/Torch)
 find_package(Torch REQUIRED)
 find_package(ZLIB REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
@@ -11,10 +11,13 @@ set(PROJECT_SOURCES body_models.cpp joint_names.cpp lbs.cpp npyio.cpp vertex_ids
 
 add_library(smplx SHARED ${PROJECT_SOURCES})
 add_library(smplx_static STATIC ${PROJECT_SOURCES})
+add_executable(example example.cpp ${PROJECT_SOURCES})
 target_link_libraries(smplx "${TORCH_LIBRARIES}" ZLIB::ZLIB)
 target_link_libraries(smplx_static "${TORCH_LIBRARIES}" ZLIB::ZLIB)
+target_link_libraries(example "${TORCH_LIBRARIES}" ZLIB::ZLIB)
 set_property(TARGET smplx PROPERTY CXX_STANDARD 17)
-set_property(TARGET smplx_staic PROPERTY CXX_STANDARD 17)
+set_property(TARGET smplx_static PROPERTY CXX_STANDARD 17)
+set_property(TARGET example PROPERTY CXX_STANDARD 17)
 # The following code block is suggested to be used on Windows.
 # According to https://github.com/pytorch/pytorch/issues/25457,
 # the DLLs need to be copied to avoid memory errors.
